<resources>
    <string name="app_name">LoveCalculator</string>
    <string name="first_name">First Name</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="you">You</string>
    <string name="second_name">Second Name</string>
    <string name="calculator">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">try_again</string>
    <string name="result">result</string>
    <string name="_100">100\\</string>
    <string name="your_score">your_score</string>
    <string name="me">me</string>
</resources>